[gd_scene load_steps=2 format=3 uid="uid://6xrhl8xrpiap"]

[ext_resource type="Script" uid="uid://bh06rqf0rrgfh" path="res://Scenes/components/physic/status_receiver.gd" id="1_l6ku0"]

[node name="StatusReceiver" type="Area3D"]
collision_layer = 0
collision_mask = 32768
script = ExtResource("1_l6ku0")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
